--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFFF0000</color>
+    <color name="green">#26FF00</color>
+    <color name="blue">#00B7FF</color>
+    <color name="yellow">#FFF200</color>
+    <color name="purple">#4C00FF</color>
+    <color name="cyan">#FF000080</color>
+    <color name="magenta">#FFFF0080</color>
+    <color name="orange">#FFFF8000</color>
+    <color name="gray">#FF808080</color>
+    <color name="transparent">#00000000</color>
+
+    <array name="color_array">
+        <item>@color/blue</item>
+        <item>@color/yellow</item>
+        <item>@color/orange</item>
+        <item>@color/red</item>
+        <item>@color/green</item>
+        <item>@color/purple</item>
+        <item>@color/cyan</item>
+        <item>@color/magenta</item>
+        <item>@color/white</item>
+        <item>@color/gray</item>
+    </array>
 </resources>
