--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,5 +5,15 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.Timer_App_CP3406_Jacob_Madeley" parent="Base.Theme.Timer_App_CP3406_Jacob_Madeley" />
+    <style name="Theme.Timer_App_CP3406_Jacob_Madeley" parent="Base.Theme.Timer_App_CP3406_Jacob_Madeley">
+
+<!--        <item name="android:navigationBarColor">-->
+<!--            @android:navigationBarColor">@color/black-->
+<!--        </item>-->
+
+<!--        <item name="android:statusBarColor">-->
+<!--            @android:statusBarColor">@color/black-->
+<!--        </item>-->
+
+    </style>
 </resources>
